# RustTemplate

./: .gitignore  Cargo.toml  README.md  Readme.md  package.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
projects/sub_projects/: Cargo.toml  readme.md
projects/sub_projects/src/: lib.rs
projects/sub_projects/src/errors/: convert.rs  display.rs  mod.rs
