[workspace]
members = ["projects/*"]
default-members = [
    "projects/sub_projects",
]
exclude = [
    "projects/.DS_Store",
]

[profile.release]
lto = true
panic = "abort"

[package.metadata.wee]
test = "cargo test"
testr = "cargo test --release"
push = "git push"
build = "cargo build --release"
fmt = "cargo fmt --all"
t = "wee test -t"
r = "git reset Head~ --hard"
p = "cargo publish --allow-dirty"

